--- a/index.html
+++ b/index.html
@@ -8,33 +8,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50">
-    <div class="flex h-screen">
-        <!-- サイドバー -->
-        <div id="sidebar" class="bg-gray-900 text-white w-64 flex flex-col h-full">
-            <div class="p-4 border-b border-gray-700">
-                <h1 class="text-lg font-semibold">小島健太郎</h1>
-                <p class="text-sm text-gray-400">模擬面接チャットボット</p>
-            </div>
-            <div class="flex-1 overflow-y-auto p-4">
-                <button id="newChatBtn" class="w-full flex items-center gap-3 p-3 rounded-md hover:bg-gray-800 transition-colors">
-                    <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z" clip-rule="evenodd" />
-                    </svg>
-                    新しいチャット
-                </button>
-            </div>
-            <div class="p-4 border-t border-gray-700">
-                <div class="flex items-center gap-2 p-2 rounded-md hover:bg-gray-800 cursor-pointer">
-                    <div class="w-8 h-8 rounded-full bg-gray-700 flex items-center justify-center">
-                        <span>小</span>
-                    </div>
-                    <span class="text-sm">アカウント</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- メインコンテンツ -->
-        <div class="flex-1 flex flex-col h-screen overflow-hidden">
+    <div class="h-screen flex flex-col">
             <!-- ヘッダー -->
             <header class="bg-white border-b border-gray-200 p-4 flex items-center justify-between">
                 <button id="toggleSidebar" class="md:hidden p-2 rounded-md hover:bg-gray-100">
