--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
         </div>
     </div>
 
-    <script src="/app.js" type="module"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
