Update chat functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小島健太郎 模擬面接</title>
+    <title>kentaro kojimaチャットボット</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
                 </button>
-                <h1 class="text-xl font-semibold">小島健太郎 模擬面接</h1>
+                <h1 class="text-xl font-semibold">kentaro kojimaチャットボット</h1>
                 <div class="w-8"></div>
             </header>
 
@@ -28,23 +28,24 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
                         </svg>
                     </div>
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-2">小島健太郎の模擬面接へようこそ</h2>
-                    <p class="max-w-md mb-8">採用担当者様、こんにちは。小島健太郎と申します。<br>どうぞお気軽にご質問ください。</p>
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-2">kentaro kojimaチャットボットへようこそ</h2>
+                    <p class="max-w-md mb-8">採用担当者様、こんにちは。小島健太郎と申します。<br>私の職務経歴書をもとにAIが回答するチャットボットです。<br>どうぞお気軽にご質問ください。</p>
                     
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-2xl">
                         <button class="suggestion-btn p-4 border border-gray-200 rounded-lg text-left hover:bg-gray-50 transition-colors">
                             自己紹介をお願いします
                         </button>
                         <button class="suggestion-btn p-4 border border-gray-200 rounded-lg text-left hover:bg-gray-50 transition-colors">
-                            今までのご経験で最も大変だったことは？
+                            あなたのスキルは？
                         </button>
                         <button class="suggestion-btn p-4 border border-gray-200 rounded-lg text-left hover:bg-gray-50 transition-colors">
-                            リーダーシップについて教えてください
+                            前職の退職理由は？
                         </button>
                         <button class="suggestion-btn p-4 border border-gray-200 rounded-lg text-left hover:bg-gray-50 transition-colors">
-                            今後のキャリアプランは？
+                            ハント症候群とは？現在の体調は？
                         </button>
                     </div>
+                    <p class="text-xs text-gray-500 mt-4 max-w-2xl w-full">※本アプリは学習目的で作成したデモ版となります。ご質問によっては、事実と異なる回答となる可能性がございますが、何卒ご了承ください。</p>
                 </div>
                 <div id="messages" class="hidden"></div>
             </main>
